--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@stripe/stripe-js": "^8.1.0",
-    "@supabase/ssr": "^0.1.0",
+    "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.39.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.344.0",
-    "next": "14.1.0",
+    "next": "^14.2.33",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.0",
